# baba

./: .nvim.lua  .rustfmt.toml  CLAUDE.md  Cargo.toml  README.md  flake.nix  llm-renderer.md
.claude/: settings.json
.claude/skills/: play-baba.md
benches/: parse_level.rs
goldens/: 0-0.ron.br  0-1.ron.br  1-0.ron.br  2-0.ron.br  3-0.ron.br  4-0.ron.br  5-0.ron.br  6-0.ron.br  7-0.ron.br
goldens/1/: 1-0.ron.br  10-0.ron.br  11-0.ron.br  12-0.ron.br  12-1.ron.br  13-0.ron.br  2-0.ron.br  3-0.ron.br  4-0.ron.br  5-0.ron.br  6-0.ron.br  7-0.ron.br  8-0.ron.br  9-0.ron.br
goldens/2/: 1-0.ron.br  10-0.ron.br  11-0.ron.br  2-0.ron.br  3-0.ron.br  4-0.ron.br  5-0.ron.br  6-0.ron.br  7-0.ron.br  8-0.ron.br  9-0.ron.br  extra-1-0.ron.br  extra-2-0.ron.br  extra-3-0.ron.br  extra-4-0.ron.br  extra-5-0.ron.br  extra-6-0.ron.br
goldens/3/: 1-0.ron.br  2-0.ron.br  3-0.ron.br  4-0.ron.br  5-0.ron.br  6-0.ron.br  7-0.ron.br  8-0.ron.br  9-0.ron.br  extra-1-0.ron.br
goldens/4/: 1-0.ron.br  10-0.ron.br  12-0.ron.br  2-0.ron.br  3-0.ron.br  4-0.ron.br  5-0.ron.br  6-0.ron.br  7-0.ron.br  8-0.ron.br  9-0.ron.br  a-0.ron.br  b-0.ron.br  c-0.ron.br  d-0.ron.br  e-0.ron.br  extra-1-0.ron.br  extra-2-0.ron.br  extra-3.ron.br
goldens/5/: 1-0.ron.br  10-0.ron.br  11-0.ron.br  12-0.ron.br  13-0.ron.br  14-0.ron.br  2-0.ron.br  3-0.ron.br  4-0.ron.br  5-0.ron.br  (+6 more)
levels/: 0-baba-is-you.txt  1-where-do-i-go.txt  2-now-what-is-this.txt  3-out-of-reach.txt  4-still-out-of-reach.txt  5-volcano.txt  6-off-limits.txt  7-grass-yard.txt  index.txt
macros/: Cargo.toml
resources/: original
src/: game.rs  main.rs  test.rs
(+95 files in other folders)
