[package]
name = "baba_is_clone"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
brotli = "3.3.4"
clap = { version = "4.0.4", features = ["derive"] }
futures = "0.3.24"
lazy_static = "1.4.0"
macroquad = "0.3.24"
ron = "0.8.0"
serde = { version = "1.0.145", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
