[workspace]
members = [".", "macros"]

[package]
name = "baba_is_clone"
version = "0.1.0"
edition = "2021"

[dependencies]

anyhow = "1.0"
brotli = "3.3.4"
clap = { version = "4.0.4", features = ["derive"] }
dirs = "4.0"
fix_fn = "1.0.2"
futures = "0.3.24"
image = "0.24.4"
itertools = "0.10.5"
lazy_static = "1.4.0"
macros = { path = "./macros" }
macroquad = "0.4.8"
oorandom = "11.1.3"
ron = "0.8.0"
serde = { version = "1.0.145", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }

[dev-dependencies]
criterion = "0.4.0"
rayon = "1.5.3"
walkdir = "2.3.2"

[lib]
name = "game"
path = "src/game.rs"

[[bench]]
name = "parse_level"
harness = false
